--- a/Order66/Jidelna.xaml
+++ b/Order66/Jidelna.xaml
@@ -9,6 +9,11 @@
       Title="Jidelna">
 
     <Grid>
-        
+        <StackPanel>
+            <Button x:Name="shopsCart" Content="Košík" Click="shopsCart_Click" />
+            <Button x:Name="shopsInfo" Content="Informace" Click="shopsInfo_Click" />
+            <ListView x:Name="Produkt_list" SelectionChanged="Produkt_list_SelectionChanged" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Height="361">
+            </ListView>
+        </StackPanel>
     </Grid>
 </Page>
