--- a/Order66/InfoItem.xaml
+++ b/Order66/InfoItem.xaml
@@ -26,10 +26,10 @@
         <Label x:Name="Itemname2" Content="Nazev :" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
         <Label x:Name="ItemMoney" Content="Cena :" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
         <Label x:Name="ItemDate" Content="Datum přidání :" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
-        <TextBlock x:Name="Itemid" Grid.Row="1" Grid.Column="1" Width="150" TextAlignment="Center"></TextBlock>
-        <TextBlock x:Name="Itemnazev" Grid.Row="2" Grid.Column="1" Width="150" TextAlignment="Center"></TextBlock>
-        <TextBlock x:Name="Itemcena" Grid.Row="3" Grid.Column="1" Width="150" TextAlignment="Center"></TextBlock>
-        <TextBlock x:Name="Itemdatum" Grid.Row="4" Grid.Column="1" Width="150" TextAlignment="Center"></TextBlock>
+        <Label x:Name="Itemid" Grid.Row="1" Grid.Column="1" Width="150" ></Label>
+        <Label x:Name="Itemnazev" Grid.Row="2" Grid.Column="1" Width="150"></Label>
+        <Label x:Name="Itemcena" Grid.Row="3" Grid.Column="1" Width="150" ></Label>
+        <Label x:Name="Itemdatum" Grid.Row="4" Grid.Column="1" Width="150" ></Label>
         <Button x:Name="Buyitem" Content="Přidat do košíku" Grid.Row="5" Grid.Column="1" Width="150" HorizontalAlignment="Right" VerticalAlignment="Top" Click="Buyitem_Click"  />
     </Grid>
 </Page>
