--- a/Order66/Jidelna.xaml
+++ b/Order66/Jidelna.xaml
@@ -12,10 +12,11 @@
         <StackPanel>
             <Button x:Name="shopsCart" Content="Košík" Click="shopsCart_Click" />
             <Button x:Name="shopsInfo" Content="Informace" Click="shopsInfo_Click" />
-            <ListView x:Name="Produkt_list" SelectionChanged="Produkt_list_SelectionChanged" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Height="360">
+            <Button x:Name="additem" Content="Přidat zboží" Click="additem_Click" />
+            <ListView x:Name="Produkt_list" SelectionChanged="Produkt_list_SelectionChanged" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Height="345">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Typ jidla" Width="150" DisplayMemberBinding="{Binding Nazev}" />
+                        <GridViewColumn Header="Typ zboží" Width="150" DisplayMemberBinding="{Binding Nazev}" />
                     </GridView>
                 </ListView.View>
             </ListView>
