--- a/Order66/AddItem.xaml
+++ b/Order66/AddItem.xaml
@@ -22,14 +22,10 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Button x:Name="backi" Click="backi_Click" Content="Zpět" Width="100" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top"/>
-        <Label x:Name="IID" Content="ID :" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
         <Label x:Name="Iname2" Content="Nazev :" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
         <Label x:Name="IMoney" Content="Cena :" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
-        <Label x:Name="IDate" Content="Datum přidání :" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
-        <Label x:Name="Iid" Grid.Row="1" Grid.Column="1" Width="150" ></Label>
-        <Label x:Name="Inazev" Grid.Row="2" Grid.Column="1" Width="150"></Label>
-        <Label x:Name="Icena" Grid.Row="3" Grid.Column="1" Width="150" ></Label>
-        <Label x:Name="Idatum" Grid.Row="4" Grid.Column="1" Width="150" ></Label>
-        <Button x:Name="add" Content="Přidat zboží" Grid.Row="5" Grid.Column="1" Width="100" HorizontalAlignment="Right" VerticalAlignment="Top" Click="add_Click" />
+        <TextBox x:Name="Inazev" Grid.Row="2" Grid.Column="1" Width="150" Height="20"></TextBox>
+        <TextBox x:Name="Icena" Grid.Row="3" Grid.Column="1" Width="150" Height="20" ></TextBox>
+        <Button x:Name="add" Content="Vytvořit zboží" Grid.Row="5" Grid.Column="1" Width="100" HorizontalAlignment="Right" VerticalAlignment="Top" Click="add_Click" />
     </Grid>
 </Page>
