--- a/Order66/InfoItem.xaml
+++ b/Order66/InfoItem.xaml
@@ -27,8 +27,8 @@
         <Label x:Name="ItemMoney" Content="Cena :" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
         <Label x:Name="ItemDate" Content="Datum přidání :" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Center" ></Label>
         <Label x:Name="Itemid" Grid.Row="1" Grid.Column="1" Width="150" ></Label>
-        <Label x:Name="Itemnazev" Grid.Row="2" Grid.Column="1" Width="150"></Label>
-        <Label x:Name="Itemcena" Grid.Row="3" Grid.Column="1" Width="150" ></Label>
+        <TextBox x:Name="Itemnazev" Grid.Row="2" Grid.Column="1" Width="150" Height="29"></TextBox>
+        <TextBox x:Name="Itemcena" Grid.Row="3" Grid.Column="1" Width="150" Height="29" ></TextBox>
         <Label x:Name="Itemdatum" Grid.Row="4" Grid.Column="1" Width="150" ></Label>
         <Button x:Name="Buyitem" Content="Přidat do košíku" Grid.Row="5" Grid.Column="1" Width="150" HorizontalAlignment="Right" VerticalAlignment="Top" Click="Buyitem_Click"  />
         <Button x:Name="Itemdelete" Content="Smazat zboží" Grid.Row="5" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Itemdelete_Click" />
